--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -17,6 +17,7 @@
     //align image in the center of the container vertically.
     // needs to be done cause images have aspect ratio - need to be aligned.
     align-items: center;
+    /* MEDIA QUERY - when width of screen is 62.5rem ($bp-large) */
     @media only screen and (max-width: $bp-large) {
       grid-column: full-start / full-end;
       padding: 6rem;
@@ -27,6 +28,7 @@
     width: 100%;
     grid-row: 2 / 6;
     grid-column: 1 / 5;
+    /* large being 62.5em - 1000px */
     // we have a 6x6 grid so lets put this image starting on grid column 1 to end at grid column 3
     @media only screen and (max-width: $bp-large) {
       grid-column: 1 / 4;
@@ -42,6 +44,7 @@
     z-index: 1;
     grid-row: 1 / 5;
     grid-column: 4 / 7;
+    /* large being 62.5em - 1000px */
     @media only screen and (max-width: $bp-large) {
       // row - from the start to the end (could have used full-start / full end)
       grid-row: 1 / -1;
@@ -61,6 +64,7 @@
     //vertically centered
     justify-content: center;
     align-items: flex-start;
+    /* large being 62.5em - 1000px */
     // Could've done this with grid - display: grid, align-content: center
     // equivalent of align-items? justify-items: start - align rows in grid
     @media only screen and (max-width: $bp-large) {
