--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -4,8 +4,8 @@
   // 8 columns are only for the central section
   // col-end 6? - ends after the sixth column - at the end of col 6
   grid-column: full-start / col-end 6;
-  /* MEDIA QUERY - when width of screen is 62.5rem ($bp-large */
-  @media only screen and (max-width: $bp-large) {
+  /* MEDIA QUERY - when width of screen is 87.5rem ($bp-largest) */
+  @media only screen and (max-width: $bp-largest) {
     grid-column: full-start / full-end;
   }
   //overlay - best way to create is with linear gradient. ../img - need to get out of sass folder
