--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
 .container {
   display: grid;
   /* comments for the grid-template-rows */
-  grid-template-rows: 10rem 80vh min-content 40vw min-content;
+  grid-template-rows: 10rem 80vh min-content repeat(2, min-content);
   grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
   /* AFTER NOTES */ }
   @media only screen and (max-width: 62.5rem) {
@@ -37,14 +37,18 @@ body {
 .features {
   /* features go from center-start to center-end - beginning to end of centre 8 grid */
   grid-column: center-start / center-end;
-  margin: 15rem 0;
+  margin: 5rem 0;
   /* making features grid item a grid container */
   display: grid;
   /* making columns for this 'sub grid'. */
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   grid-gap: 6rem;
   /* align text to be at the top of the boxes within the grid */
-  align-items: start; }
+  align-items: start;
+  /* large being 87.5em - 1400px */ }
+  @media only screen and (max-width: 87.5em) {
+    .features {
+      margin: 5rem 0; } }
 
 .feature {
   /* Need to make the feature elements themselves individual grids */
@@ -73,7 +77,6 @@ body {
   background-size: cover;
   background-position: center;
   padding: 5rem;
-  padding-top: 4rem;
   display: grid;
   /* grid row explanation */
   grid-template-rows: 1fr min-content minmax(10rem, min-content) min-content;
@@ -122,8 +125,7 @@ body {
   /* MEDIA QUERY - when width of screen is 87.5rem ($bp-largest) */ }
   @media only screen and (max-width: 87.5em) {
     .players {
-      grid-column: full-start / full-end;
-      justify-content: space-evenly; } }
+      grid-column: full-start / full-end; } }
   .players__list {
     display: grid;
     /* first column for images, second for the text */
@@ -144,12 +146,14 @@ body {
     @media only screen and (max-width: 50em) {
       .players__list {
         grid-template-columns: min-content max-content;
-        grid-row-gap: 2vh; } }
+        grid-row-gap: 2vh;
+        justify-items: start; } }
   .players__img {
     /* width: 150px */
     width: 15rem;
     border-radius: 50%;
-    display: block; }
+    display: block;
+    /* large being 62.5em - 1000px */ }
     @media only screen and (max-width: 62.5rem) {
       .players__img {
         width: 6rem; } }
@@ -157,14 +161,17 @@ body {
     text-transform: uppercase;
     font-size: 1.5rem;
     color: #f9f7f6;
-    margin-top: -3px; }
+    margin-top: -3px;
+    /* large being 62.5em - 1000px */ }
     @media only screen and (max-width: 62.5rem) {
       .players__goals {
         font-size: 0.75rem;
         margin-top: 0px; } }
-  @media only screen and (max-width: 62.5rem) {
-    .players__name {
-      line-height: 1.7rem; } }
+  .players__name {
+    /* large being 62.5em - 1000px */ }
+    @media only screen and (max-width: 62.5rem) {
+      .players__name {
+        line-height: 1.7rem; } }
 
 .navbar {
   background-color: #f9f7f6;
@@ -239,7 +246,7 @@ body {
     @media only screen and (max-width: 62.5rem) {
       .story__pictures {
         grid-column: full-start / full-end;
-        padding: 6rem; } }
+        padding: 5rem; } }
   .story__img--1 {
     width: 100%;
     grid-row: 2 / 6;
@@ -265,7 +272,7 @@ body {
   .story__content {
     background-color: #f9f7f6;
     grid-column: col-start 5 / full-end;
-    padding: 6rem 8vw;
+    padding: 5rem 8vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
