--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -44,8 +44,8 @@ body {
   display: grid;
   /* comments for the grid-template-rows */
   // 80% of the view-height, then min-content - smallest size of box without overflowing content.
-  // 40% of view-width - whats visible in the viewport depending on how wide you make screen.
-  grid-template-rows: 10rem 80vh min-content 40vw min-content;
+
+  grid-template-rows: 10rem 80vh min-content repeat(2, min-content);
   grid-template-columns:
     [full-start] minmax(6rem, 1fr) [center-start] repeat(
       8,
