breakpoint unit correction

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -12,7 +12,7 @@ $font-display: 'Lato', sans-serif;
 
 /* RESPONSIVE BREAKPOINTS */
 $bp-largest: 87.5em; // 1400px divided by 16 (16 -> default font-size for a browser)
-$bp-large: 62.5rem; // 1000px divided by 16
+$bp-large: 62.5em; // 1000px divided by 16
 $bp-medium: 50em; // 800px divided by 16
 $bp-small: 37.5em; // 600px divided by 16
 * {
