--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import 'footer';
 @import 'header';
 @import 'players';
-@import 'navbar';
+@import 'navbar-first';
+@import 'navbar-second';
 @import 'story';
 @import 'typography';
