--- a/sass/_navbar-first.scss
+++ b/sass/_navbar-first.scss
@@ -15,8 +15,8 @@
 
   &__list {
     display: grid;
-    /* minmax(10rem, 1fr); minimum width of 10rem, max of 1fr. autofit = as many 
-  columns as possible in in grid containers width */
+    /* minmax(10rem, 1fr); minimum width of each column is 10rem, max width of 1fr. autofit = as many 
+    columns as possible in in grid containers width. 1fr = 1 part of the space available */
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
     /* get rid of default bullets */
     list-style: none;
@@ -44,4 +44,10 @@
     /* providing some space on the right side */
     margin-right: 0.3rem;
   }
+}
+
+// Search Form section - second part of First Navbar
+.search {
+  /* I want the first navbar to start 4/5 (or 8/10) along the page horizontally - (from column 8) */
+  grid-column: 8/ 10;
 }
