--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -56,6 +56,6 @@ body {
   // why only name the columns and not the rows?
   // in overall layout focus is generally on the columns and not the rows - columns more important
   @media only screen and (max-width: $bp-large) {
-    grid-template-rows: 10rem calc(100vh - 10rem);
+    grid-template-rows: 10rem 10rem calc(100vh - 20rem);
   }
 }
