first navbar complete

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -7,7 +7,9 @@ $color-grey-1: #f9f7f6;
 $color-grey-2: #aaa;
 
 /* FONT VARIABLES */
+/* For general body */
 $font-primary: 'Nunito', sans-serif;
+/* For titles */
 $font-display: 'Lato', sans-serif;
 
 /* RESPONSIVE BREAKPOINTS */
