--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -32,7 +32,7 @@ body {
   /* AFTER NOTES */ }
   @media only screen and (max-width: 62.5em) {
     .container {
-      grid-template-rows: 10rem calc(100vh - 10rem); } }
+      grid-template-rows: 10rem 10rem calc(100vh - 20rem); } }
 
 .features {
   /* features go from center-start to center-end - beginning to end of centre 8 grid */
@@ -174,8 +174,62 @@ body {
         line-height: 1.7rem; } }
 
 .first-nav {
-  background-color: #f9f7f6;
-  grid-column: 4 / full-end; }
+  /* provide first-nav elements some styles */
+  /* sizing the favicons in first nav */ }
+  .first-nav__container {
+    background-color: #0c22e8;
+    display: grid;
+    grid-column: full-start / full-end; }
+  .first-nav__content {
+    /* I want the first navbar to start halfway along the page horizontally - from column 5 */
+    grid-column: 5 / 10;
+    grid-template-rows: repeat(2, min-content);
+    grid-row-gap: 1.6rem;
+    /* give sign up, cart etc a little space from the top of the container */
+    margin-top: 1.6rem; }
+  .first-nav__list {
+    display: grid;
+    /* minmax(10rem, 1fr); minimum width of each column is 10rem, max width of 1fr. autofit = as many 
+    columns as possible in in grid containers width. 1fr = 1 part of the space available */
+    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+    /* get rid of default bullets */
+    list-style: none; }
+  .first-nav__link {
+    /* get rid of default link styles */
+    text-decoration: none;
+    font-size: 1.6rem;
+    color: #f9f7f6;
+    /* when an element is inline-block it still behaves like an inline element, but 
+  in this case we are able to define the width for it */
+    display: inline-block;
+    /* center items in grid cells - need element to take up entire width of grid cell */
+    width: 100%;
+    text-align: center; }
+  .first-nav__link span {
+    font-size: 1.3rem; }
+  .first-nav__link i {
+    font-size: 1.3rem;
+    /* providing some space on the right side */
+    margin-right: 0.3rem; }
+
+.search {
+  /* I want the first navbar to start 4/5 (or 8/10) along the page horizontally - (from column 8) */
+  grid-column: 8/ 10; }
+  .search__form {
+    display: grid;
+    /* divide form element into 10 columns - each 10% width */
+    grid-template-columns: repeat(10, 10%); }
+  .search__input {
+    /* 3 to the end hence -1 */
+    grid-column: 3 / -1;
+    grid-row: 1 / 2;
+    /* top and botton 0.3rem, left and right 0.4rem */
+    padding: 0.3rem 0.4rem;
+    font-size: 1.3rem;
+    /* getting rid of the border around the search bar */
+    border: none;
+    border-bottom: 0.1rem solid;
+    outline: none; }
 
 .navbar {
   background-color: #f9f7f6;
