--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,6 @@ body {
     /* I want the first navbar to start halfway along the page horizontally - from column 5 */
     grid-column: 5 / 10;
     grid-template-rows: repeat(2, min-content);
-    grid-row-gap: 1.6rem;
     /* give sign up, cart etc a little space from the top of the container */
     margin-top: 1.6rem; }
   .first-nav__list {
@@ -256,7 +255,7 @@ body {
     color: #f9f7f6;
     cursor: pointer; }
 
-.navbar {
+.second-nav {
   background-color: #f9f7f6;
   grid-column: full-start / full-end;
   display: grid;
@@ -264,7 +263,7 @@ body {
   grid-column-gap: 1rem;
   grid-template-rows: 10% 80% 10%;
   align-items: center; }
-  .navbar__badge {
+  .second-nav__badge {
     width: 100%;
     grid-column: 2 / 3;
     grid-row: 2 / 3;
