--- a/css/style.css
+++ b/css/style.css
@@ -270,13 +270,13 @@ body {
     margin: 0.5rem; }
 
 .menu-toggle {
+  display: none;
   grid-column: 4 / 5;
   grid-row: 2 / 3;
   height: 100%;
   background: transparent;
   border: none;
   cursor: pointer;
-  display: flex;
   flex-direction: column;
   /* WHY? - remember the flex-direction has now been set as column so align-items will now be horizontally */
   align-items: center;
@@ -285,6 +285,10 @@ body {
   background-color: #0c22e8;
   position: relative;
   text-align: center; }
+  @media only screen and (max-width: 62.5em) {
+    .menu-toggle {
+      /* only want to display the hamburger icon on smaller devices */
+      display: flex; } }
   .menu-toggle:hover {
     background-color: #0a19a1; }
   .menu-toggle__inner {
