--- a/css/style.css
+++ b/css/style.css
@@ -255,23 +255,27 @@ body {
     color: #f9f7f6;
     cursor: pointer; }
 
-.second-nav {
+.second-nav__container {
   background-color: #f9f7f6;
-  grid-column: full-start / full-end;
+  grid-column: full-start / full-end; }
+
+.second-nav__content {
   display: grid;
-  grid-template-columns: 1rem 8rem 1fr 8rem 1rem;
+  /* provide small amount of padding to right and left side of second nav */
+  padding: 0 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
   grid-column-gap: 1rem;
   grid-template-rows: 10% 80% 10%;
   align-items: center; }
-  .second-nav__badge {
+  .second-nav__content__badge {
     width: 100%;
-    grid-column: 2 / 3;
+    grid-column: 1 / 2;
     grid-row: 2 / 3;
     margin: 0.5rem; }
 
 .menu-toggle {
   display: none;
-  grid-column: 4 / 5;
+  grid-column: 3 / 4;
   grid-row: 2 / 3;
   height: 100%;
   background: transparent;
