--- a/sass/_navbar-second.scss
+++ b/sass/_navbar-second.scss
@@ -1,17 +1,23 @@
 .second-nav {
-  background-color: $color-grey-1;
-  grid-column: full-start / full-end;
-  display: grid;
-  grid-template-columns: 1rem 8rem 1fr 8rem 1rem;
-  grid-column-gap: 1rem;
-  grid-template-rows: 10% 80% 10%;
-  // make sure within their grid cells the items are centered vertically
-  align-items: center;
-  &__badge {
-    width: 100%;
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
-    margin: 0.5rem;
+  &__container {
+    background-color: $color-grey-1;
+    grid-column: full-start / full-end;
+  }
+  &__content {
+    display: grid;
+    /* provide small amount of padding to right and left side of second nav */
+    padding: 0 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
+    grid-column-gap: 1rem;
+    grid-template-rows: 10% 80% 10%;
+    // make sure within their grid cells the items are centered vertically
+    align-items: center;
+    &__badge {
+      width: 100%;
+      grid-column: 1 / 2;
+      grid-row: 2 / 3;
+      margin: 0.5rem;
+    }
   }
 }
 
@@ -21,7 +27,7 @@
     display: flex;
   }
   display: none;
-  grid-column: 4 / 5;
+  grid-column: 3 / 4;
   grid-row: 2 / 3;
   height: 100%;
   background: transparent;
