--- a/css/style.css
+++ b/css/style.css
@@ -255,23 +255,29 @@ body {
     color: #f9f7f6;
     cursor: pointer; }
 
-.second-nav__container {
-  background-color: #f9f7f6;
-  grid-column: full-start / full-end; }
-
-.second-nav__content {
+.second-nav {
   display: grid;
+  background-color: #f9f7f6;
+  grid-column: full-start / full-end;
   /* provide small amount of padding to right and left side of second nav */
   padding: 0 1rem;
-  grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
+  grid-template-columns: 8rem 1fr;
   grid-column-gap: 1rem;
+  list-style: none;
   grid-template-rows: 10% 80% 10%;
   align-items: center; }
-  .second-nav__content__badge {
+  @media only screen and (max-width: 62.5em) {
+    .second-nav {
+      grid-template-columns: 8rem 1fr 8rem; } }
+  .second-nav__badge {
     width: 100%;
     grid-column: 1 / 2;
     grid-row: 2 / 3;
     margin: 0.5rem; }
+  .second-nav__list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+    list-style: none; }
 
 .menu-toggle {
   display: none;
