--- a/sass/_navbar-second.scss
+++ b/sass/_navbar-second.scss
@@ -1,23 +1,28 @@
 .second-nav {
-  &__container {
-    background-color: $color-grey-1;
-    grid-column: full-start / full-end;
+  display: grid;
+  background-color: $color-grey-1;
+  grid-column: full-start / full-end;
+  /* provide small amount of padding to right and left side of second nav */
+  padding: 0 1rem;
+  grid-template-columns: 8rem 1fr;
+  @media only screen and (max-width: $bp-large) {
+    grid-template-columns: 8rem 1fr 8rem;
   }
-  &__content {
+  grid-column-gap: 1rem;
+  list-style: none;
+  grid-template-rows: 10% 80% 10%;
+  // make sure within their grid cells the items are centered vertically
+  align-items: center;
+  &__badge {
+    width: 100%;
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    margin: 0.5rem;
+  }
+  &__list {
     display: grid;
-    /* provide small amount of padding to right and left side of second nav */
-    padding: 0 1rem;
-    grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
-    grid-column-gap: 1rem;
-    grid-template-rows: 10% 80% 10%;
-    // make sure within their grid cells the items are centered vertically
-    align-items: center;
-    &__badge {
-      width: 100%;
-      grid-column: 1 / 2;
-      grid-row: 2 / 3;
-      margin: 0.5rem;
-    }
+    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+    list-style: none;
   }
 }
 
