--- a/css/style.css
+++ b/css/style.css
@@ -255,34 +255,28 @@ body {
     color: #f9f7f6;
     cursor: pointer; }
 
-.second-nav {
-  display: grid;
+.second-nav__container {
   background-color: #f9f7f6;
+  display: grid;
   grid-column: full-start / full-end;
-  /* provide small amount of padding to right and left side of second nav */
-  padding: 0 1rem;
-  grid-template-columns: 8rem 1fr;
-  grid-column-gap: 1rem;
-  list-style: none;
-  grid-template-rows: 10% 80% 10%;
-  align-items: center; }
-  @media only screen and (max-width: 62.5em) {
-    .second-nav {
-      grid-template-columns: 8rem 1fr 8rem; } }
-  .second-nav__badge {
-    width: 100%;
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
-    margin: 0.5rem; }
-  .second-nav__list {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
-    list-style: none; }
+  grid-template-columns: 10rem 1fr; }
+
+.second-nav__badge {
+  grid-column: 1 /2;
+  width: 8rem;
+  padding: 0.5rem; }
+
+.second-nav__content {
+  grid-column: 2 / 10; }
+
+.second-nav__list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+  list-style: none; }
 
 .menu-toggle {
   display: none;
-  grid-column: 3 / 4;
-  grid-row: 2 / 3;
+  grid-column: 9 / 10;
   height: 100%;
   background: transparent;
   border: none;
