--- a/sass/_navbar-second.scss
+++ b/sass/_navbar-second.scss
@@ -1,23 +1,17 @@
 .second-nav {
-  display: grid;
-  background-color: $color-grey-1;
-  grid-column: full-start / full-end;
-  /* provide small amount of padding to right and left side of second nav */
-  padding: 0 1rem;
-  grid-template-columns: 8rem 1fr;
-  @media only screen and (max-width: $bp-large) {
-    grid-template-columns: 8rem 1fr 8rem;
+  &__container {
+    background-color: $color-grey-1;
+    display: grid;
+    grid-column: full-start / full-end;
+    grid-template-columns: 10rem 1fr;
   }
-  grid-column-gap: 1rem;
-  list-style: none;
-  grid-template-rows: 10% 80% 10%;
-  // make sure within their grid cells the items are centered vertically
-  align-items: center;
   &__badge {
-    width: 100%;
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
-    margin: 0.5rem;
+    grid-column: 1 /2;
+    width: 8rem;
+    padding: 0.5rem;
+  }
+  &__content {
+    grid-column: 2 / 10;
   }
   &__list {
     display: grid;
@@ -26,14 +20,14 @@
   }
 }
 
+// Hamburger menu
 .menu-toggle {
   @media only screen and (max-width: $bp-large) {
     /* only want to display the hamburger icon on smaller devices */
     display: flex;
   }
   display: none;
-  grid-column: 3 / 4;
-  grid-row: 2 / 3;
+  grid-column: 9 / 10;
   height: 100%;
   background: transparent;
   border: none;
