--- a/css/style.css
+++ b/css/style.css
@@ -259,10 +259,13 @@ body {
   background-color: #f9f7f6;
   display: grid;
   grid-column: full-start / full-end;
-  grid-template-columns: 10rem 1fr; }
+  grid-template-columns: 8rem 1fr; }
+  @media only screen and (max-width: 62.5em) {
+    .second-nav__container {
+      grid-template-columns: 8rem 1fr 8rem; } }
 
 .second-nav__badge {
-  grid-column: 1 /2;
+  grid-column: 1 / 2;
   width: 8rem;
   padding: 0.5rem; }
 
@@ -283,7 +286,8 @@ body {
 .menu-toggle {
   display: none;
   grid-column: 9 / 10;
-  height: 100%;
+  margin: 0.5rem;
+  width: 8rem;
   background: transparent;
   border: none;
   cursor: pointer;
