--- a/sass/_navbar-second.scss
+++ b/sass/_navbar-second.scss
@@ -3,10 +3,13 @@
     background-color: $color-grey-1;
     display: grid;
     grid-column: full-start / full-end;
-    grid-template-columns: 10rem 1fr;
+    grid-template-columns: 8rem 1fr;
+    @media only screen and (max-width: $bp-large) {
+      grid-template-columns: 8rem 1fr 8rem;
+    }
   }
   &__badge {
-    grid-column: 1 /2;
+    grid-column: 1 / 2;
     width: 8rem;
     padding: 0.5rem;
   }
@@ -34,7 +37,8 @@
   }
   display: none;
   grid-column: 9 / 10;
-  height: 100%;
+  margin: 0.5rem;
+  width: 8rem;
   background: transparent;
   border: none;
   cursor: pointer;
