--- a/css/style.css
+++ b/css/style.css
@@ -281,13 +281,16 @@ body {
   list-style: none; }
 
 .second-nav__link {
-  text-align: center; }
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 1.8rem;
+  color: #0a19a1; }
 
 .menu-toggle {
   display: none;
   grid-column: 9 / 10;
   margin: 0.5rem;
-  width: 8rem;
+  height: 100%;
   background: transparent;
   border: none;
   cursor: pointer;
