--- a/css/style.css
+++ b/css/style.css
@@ -262,17 +262,22 @@ body {
   grid-template-columns: 8rem 1fr; }
   @media only screen and (max-width: 62.5em) {
     .second-nav__container {
-      grid-template-columns: 8rem 1fr 8rem; } }
+      grid-template-columns: 8rem 1fr 8rem;
+      grid-template-rows: 10rem; } }
 
 .second-nav__badge {
   grid-column: 1 / 2;
   width: 8rem;
-  padding: 0.5rem; }
+  margin: 0.5rem; }
 
 .second-nav__content {
   grid-column: 2 / 10;
   display: grid;
   align-content: center; }
+  @media only screen and (max-width: 62.5em) {
+    .second-nav__content {
+      justify-content: end;
+      align-content: stretch; } }
 
 .second-nav__list {
   display: grid;
@@ -288,9 +293,10 @@ body {
 
 .menu-toggle {
   display: none;
-  grid-column: 9 / 10;
-  margin: 0.5rem;
-  height: 100%;
+  grid-column: 2 / 3;
+  margin: 1rem;
+  width: 8rem;
+  height: 8rem;
   background: transparent;
   border: none;
   cursor: pointer;
