--- a/sass/_navbar-second.scss
+++ b/sass/_navbar-second.scss
@@ -6,17 +6,22 @@
     grid-template-columns: 8rem 1fr;
     @media only screen and (max-width: $bp-large) {
       grid-template-columns: 8rem 1fr 8rem;
+      grid-template-rows: 10rem;
     }
   }
   &__badge {
     grid-column: 1 / 2;
     width: 8rem;
-    padding: 0.5rem;
+    margin: 0.5rem;
   }
   &__content {
     grid-column: 2 / 10;
     display: grid;
     align-content: center;
+    @media only screen and (max-width: $bp-large) {
+      justify-content: end;
+      align-content: stretch;
+    }
   }
   &__list {
     display: grid;
@@ -39,9 +44,10 @@
     display: flex;
   }
   display: none;
-  grid-column: 9 / 10;
-  margin: 0.5rem;
-  height: 100%;
+  grid-column: 2 / 3;
+  margin: 1rem;
+  width: 8rem;
+  height: 8rem;
   background: transparent;
   border: none;
   cursor: pointer;
