--- a/sass/_navbar-second.scss
+++ b/sass/_navbar-second.scss
@@ -15,6 +15,8 @@
     grid-column: 1 / 2;
     /* width of badge */
     width: 8rem;
+    /* height of the badge */
+    height: 8rem;
     /* set margin from edge of page */
     margin: 1rem;
   }
